# Inkwell

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  settings.html  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: design-system.md  灵感.md  设计决策.md  问题分析报告.md
src/: App.test.tsx  App.tsx  settings-main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard_listener.rs  commands.rs  db.rs  foreground_tracker.rs  image_store.rs  lib.rs  paste.rs  settings.rs  state.rs
src/components/: Card.tsx  CardFlow.tsx  CardStack.tsx  ClearConfirm.tsx  ContextMenu.tsx  Panel.tsx  PhraseEditModal.tsx  PhraseGrid.tsx  SearchView.tsx  SettingsApp.tsx  TopBar.tsx  icons.tsx
src/data/: mock.test.ts  mock.ts
src/lib/: animateWindowSize.ts  format.ts  motion.ts  tauri.test.ts  tauri.ts  theme.test.ts  theme.ts  types.ts
src/styles/: base.css  panel.css  settings.css  tokens.css
