[package]
name = "inkwell"
version = "0.1.0"
description = "Inkwell - 墨池剪切板"
authors = ["sor9ryloo"]
license = "MIT"
edition = "2021"

[lib]
name = "inkwell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
clipboard-win = "5"
parking_lot = "0.12"
sha2 = "0.10"
hex = "0.4"
blake3 = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
base64 = "0.22"
windows = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_DataExchange",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
] }
